# Ichigo

./: README.md  README.rst  config.yml  pyproject.toml
ichigo/: __init__.py  __main__.py  app.py  main.py
ichigo/config/: __init__.py  load.py  models.py
ichigo/database/: __init__.py
ichigo/resources/: __init__.py
tests/: test_ichigo.py
